force-app/main/default/objects/Fleet_Agent__c/Fleet_Agent__c.object-meta.xml
<CustomObject>
    <description>Registry of monitored Agentforce agents. Reference data (Public Read Only).</description>
    <label>Fleet Agent</label>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Agents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>