force-app/main/default/objects/Fleet_Agent__c/fields/Agent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_API_Name__c</fullName>
    <label>Agent API Name</label>
    <description>The developer/API name of the monitored Agentforce agent.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <required>true</required>
    <unique>true</unique>
</CustomField>