force-app/main/default/objects/Fleet_Agent__c/fields/Blessed_Version__c.field-meta.xml
<CustomField>
    <fullName>Blessed_Version__c</fullName>
    <label>Blessed Version</label>
    <description>The agent version whose calibration run is the approved baseline.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>