force-app/main/default/objects/Fleet_Agent__c/fields/Bot_Id__c.field-meta.xml
<CustomField>
    <fullName>Bot_Id__c</fullName>
    <label>Bot Id</label>
    <description>The 18-character Bot definition Id backing this agent.</description>
    <inlineHelpText>The BotDefinition Id for the monitored agent.</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>