force-app/main/default/objects/Fleet_Agent__c/fields/Calibration_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Schedule__c</fullName>
    <label>Calibration Schedule</label>
    <description>Cron expression governing this agent's calibration cadence.</description>
    <inlineHelpText>A Salesforce cron expression, e.g. 0 0 6 * * ? for daily at 6am.</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>