force-app/main/default/objects/Fleet_Agent__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <label>Current Version</label>
    <description>The version of the agent currently deployed and being monitored.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>