force-app/main/default/objects/Fleet_Agent__c/fields/Last_Calibrated_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Calibrated_At__c</fullName>
    <label>Last Calibrated At</label>
    <description>Timestamp of the most recent completed calibration run for this agent.</description>
    <type>DateTime</type>
</CustomField>