force-app/main/default/objects/Fleet_Agent__c/fields/Monitoring_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Enabled__c</fullName>
    <label>Monitoring Enabled</label>
    <description>When true, the scheduled calibration sweep includes this agent.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>