force-app/main/default/objects/Fleet_Agent__c/fields/Owner_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue_Id__c</fullName>
    <label>Owner Queue Id</label>
    <description>Id of the queue that owns findings for this agent and receives managed sharing.</description>
    <inlineHelpText>The Group (Queue) Id used by Apex managed sharing for this agent's findings.</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>