force-app/main/default/objects/Fleet_Agent__c/fields/Quarantined_At__c.field-meta.xml
<CustomField>
    <fullName>Quarantined_At__c</fullName>
    <label>Quarantined At</label>
    <description>Timestamp the agent version was quarantined, if applicable.</description>
    <type>DateTime</type>
</CustomField>