force-app/main/default/objects/Fleet_Agent__c/fields/Quarantined_By__c.field-meta.xml
<CustomField>
    <fullName>Quarantined_By__c</fullName>
    <label>Quarantined By</label>
    <description>User who quarantined the agent version.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agents Quarantined</relationshipLabel>
    <relationshipName>Fleet_Agents_Quarantined</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>