force-app/main/default/objects/Fleet_Agent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Operational status of the agent derived from its latest trueness score.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
                <default>true</default>
                <label>Healthy</label>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
            <value>
                <fullName>Out_Of_True</fullName>
                <label>Out of True</label>
            </value>
            <value>
                <fullName>Quarantined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>