force-app/main/default/objects/Fleet_Agent__c/fields/Trueness_Score__c.field-meta.xml
<CustomField>
    <fullName>Trueness_Score__c</fullName>
    <label>Trueness Score</label>
    <description>Latest trueness score 0-100, maintained by Apex from the most recent calibration run.</description>
    <inlineHelpText>How closely the agent still matches its blessed baseline, 0-100.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>